--- a/app/.env.production
+++ b/app/.env.production
@@ -3,7 +3,7 @@ APP_DEBUG=false
 
 NUXT_SITE_NAME="Nuxt Template"
 NUXT_SITE_ENV=production
-NUXT_PUBLIC_SITE_URL=https://bydevel.cz
+NUXT_PUBLIC_SITE_URL=https://davidsmid.cz/
 NUXT_APP_BASE_URL=/
 
 WEBLOCK_PASSWORD=
