--- a/app/package.json
+++ b/app/package.json
@@ -37,6 +37,7 @@
 		"eslint-plugin-promise": "^6.2.0",
 		"eslint-plugin-vue": "^9.26.0",
 		"nuxt": "latest",
+		"nuxt3-aos": "^1.0.19",
 		"postcss-html": "^1.7.0",
 		"sass": "^1.77.2",
 		"stylelint": "^16.6.0",
